# Chatur-Rag

./: README.md  main.py  pyproject.toml  requirements.txt
app/: Chatur.py  api_client.py  components.py  config.py  main.py
core/: pipeline.py  query_processor.py
core/evaluation/: confidence_evaluator.py
core/failure/: failure_handler.py
core/generation/: answer_generator.py
core/ingestion/: chunker.py  cleaner.py  embedder.py  indexer.py  loader.py  pipeline.py
core/learning/: feedback_classifier.py  learning_engine.py
core/memory/: memory_manager.py
core/optimizer/: context_optimizer.py
core/ranking/: ranker.py
core/retriever/: faiss_retriever.py  hybrid_retriever.py  keyword_retriever.py
data/processed/chroma_db/: chroma.sqlite3
evaluation/: metrics.py  test_queries.json
llm/: groq_client.py  prompts.py
logs/: learning_updates.jsonl
utils/: helpers.py  logger.py
vectorstores/: chroma_store.py  faiss_store.py
vectorstores/chroma_memory/78d44299-3a1a-457e-a1b5-fdc203c557c1/: index_metadata.pickle
vectorstores/faiss_index/: index.faiss  index.pkl
