[project]
name = "aura-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.30.0",
    "asyncio-pool>=0.6.0",
    "cachetools>=5.3.0",
    "chromadb>=0.4.0",
    "datasets>=2.20.0",
    "faiss-cpu>=1.7.4",
    "groq>=0.9.0",
    "langchain>=0.2.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.6",
    "langchain-huggingface>=0.0.3",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.8.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "ragas>=0.1.10",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.55.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "torch>=2.0.0",
    "typing>=3.10.0.0",
]
